force-app/main/default/objects/Opportunity_Line_Item__c/Opportunity_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Opportunity Line Item</label>
    <nameField>
        <label>OLI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>