force-app/main/default/objects/Opportunity_Line_Item__c/fields/Hours_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Hours_Quantity__c</fullName>
    <label>Hours Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>