force-app/main/default/objects/Opportunity_Line_Item__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Desarrollador</fullName>
            </value>
            <value>
                <fullName>Arquitecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>